# identity_service

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 9e3ad71b6696_added_user_table.py  fc7ce2dd01d5_add_age_column_to_users_table.py
app/: __init__.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/users/: __init__.py
app/application/: __init__.py
app/application/users/: __init__.py
app/config/: __init__.py  settings.py
app/domain/: __init__.py
app/domain/services/: __init__.py
app/domain/value_objects/: __init__.py
app/infrastructure/: __init__.py
app/infrastructure/db/: __init__.py
app/infrastructure/db/mappers/: __init__.py
app/infrastructure/db/models/: __init__.py  base_model.py  user.py
app/infrastructure/db/repositories/: __init__.py
app/infrastructure/security/: __init__.py
docker/dev/: Dockerfile  docker-compose.yml  wait-for-db.sh
